--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "multer": "^2.0.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^7.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
