--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@aws-sdk/s3-request-presigner": "^3.828.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.1",
     "multer-s3": "^3.0.1",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "openai": "^5.20.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
