--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+        "seed:faqs": "node scripts/seedFaqs.js"
+
   },
   "keywords": [],
   "author": "",
